--- a/app/assets/stylesheets/exchanges.scss
+++ b/app/assets/stylesheets/exchanges.scss
@@ -1,3 +1,53 @@
-// Place all the styles related to the Exchanges controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background: image-url("/background-conversor-moeda.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.main {
+  margin-top: 50px;
+
+  .logo {
+    width: 100%;
+    max-width: 80px;
+  }
+
+  .author {
+    color: #fff;
+    margin-top: 20px;
+    text-decoration: none;
+    transition: color 0.2s;
+
+    &:hover {
+      color: #5bc0de;
+    }
+  }
+}
+
+.title-box {
+  margin-top: 20%;
+
+  .title {
+    color: white;
+    text-shadow: 2px 0px 2px #000000;
+  }
+
+  .subtitle {
+    color: white;
+    text-shadow: 3px 0px 3px #000000;
+    font-size: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+.exchange_box {
+  margin: 10px auto;
+  
+  .logo-box {
+    margin: 0 auto;
+    padding-bottom: 10px;
+  }
+}
