--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Exchanges#index</h1>
-<p>Find me in app/views/exchanges/index.html.erb</p>
+<div class="container">
+  <div class="row main">    
+    <div class="col-lg-3 offset-lg-1 col-md-10 offset-md-1 exchange_box">      
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <%= image_tag '/logo.png', class: 'img-fluid logo'%>
+        </div>
+      </div>
+
+      <div class="row">
+        <%= render 'exchange_box' %>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <a href="https://www.linkedin.com/in/m%C3%A1rcio-fran%C3%A7a-lima-916454187/" target="_blank" rel="noreferrer noopener" class="author">Márcio França Lima</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
